--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 
 [dependencies]
 kiss3d = "0.32"
-diffeq = "0.1.0"
+csv = "1.1.6"
+serde = { version = "1.0", features = ["derive"] }
